fix code sigiup have otp
